--- a/demo-styles.css
+++ b/demo-styles.css
@@ -18,8 +18,8 @@ body {
   
   model-viewer {
     width: 100%;
-    height: 400px;
-    background-color: #70BCD1;
+    height: 1020px;
+    background-color: #1721249c;
     --poster-color: #ffffff00;
   }
   
