--- a/demo-styles.css
+++ b/demo-styles.css
@@ -2,7 +2,9 @@ body {
     margin: 1em;
     padding: 0;
     font-family: Google Sans, Noto, Roboto, Helvetica Neue, sans-serif;
-    color: #244376;
+    color: #1457c2;
+    background-color: rgba(214, 214, 214, 0.979);
+    align-items: center;
   }
   
   
@@ -12,15 +14,14 @@ body {
     flex-direction: column;
     max-width: 600px;
     border-radius: 6px;
-    box-shadow: 0 3px 10px rgba(0, 0, 0, 0.25);
+    box-shadow: 0 3px 10px rgba(58, 58, 58, 0.25);
     overflow: hidden;
-    height: 700px;
   }
   
   model-viewer {
     width: 100%;
-    height: 900px;
-    background-color: #1721249c;
+    height: 400px;
+    background-color: #b9bdbd;
     --poster-color: #ffffff00;
   }
   
@@ -54,3 +55,24 @@ body {
     font-style: italic;
     line-height: 1.5em;
   }
+  
+   #ar-button {
+    background-image: url(ar_icon.png);
+    background-repeat: no-repeat;
+    background-size: 20px 20px;
+    background-position: 12px 50%;
+    background-color: #fff;
+    position: absolute;
+    left: 50%;
+    transform: translateX(-50%);
+    white-space: nowrap;
+    bottom: 16px;
+    padding: 0px 16px 0px 40px;
+    font-family: Roboto Regular, Helvetica Neue, sans-serif;
+    font-size: 14px;
+    color: #4285f4;
+    height: 36px;
+    line-height: 36px;
+    border-radius: 18px;
+    border: 1px solid #DADCE0;
+}
